# coveralls-python

./: .gitignore  .pre-commit-config.yaml  .python-version  .readthedocs.yml  .travis.yml  AUTHORS  CHANGELOG  CHANGELOG.md  CHANGELOG.rst  CONTRIBUTING.md  CONTRIBUTING.rst  Dockerfile  LICENCE  LICENSE.rst  LICENSE.txt  MANIFEST.in  Makefile  README.rst  RELEASE.rst  circle.yml  cliff.toml  docker-update-readme.js  pyproject.toml  requirements.txt  setup.cfg  setup.py  tox.ini
.circleci/: config.yml
.github/: CODEOWNERS  ISSUE_TEMPLATE.md  PULL_REQUEST_TEMPLATE.md  autoapproval.yml  renovate.json  renovate.json5  settings.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: autoapproval.yml  build.yml  codeql.yml  dependencies.yaml  pythonpackage.yml  test.yml
coveralls/: __init__.py  api.py  cli.py  exception.py  git.py  reporter.py  utilities.py
docs/: authors.rst  conf.py  index.rst  release.rst  troubleshooting.rst
docs/tips/: coveragerc.rst  nosetests.rst
docs/usage/: configuration.rst  index.rst  multilang.rst  tox.rst  vcsconfig.rst
example/: example.json  project.py  runtests.py
https/github.com/decentralizedbloodbank/: ceilometer.git
nonunicode/: malformed.py  nonunicode.py
tests/: __init__.py  api_test.py  cli_test.py  conftest.py  git_test.py  integration_test.py  test_api.py  test_cli.py  test_git_malformed_remote.py
tests/api/: configuration_test.py  encoding_test.py  exception_test.py  git_test.py  no_configuration_test.py  output_test.py  reporter_test.py  wear_test.py
tests/coverage_templates/: bar.py  bar_310.py  foo.py
tests/data/: foo.py
