[tool.poetry]
name = "coveralls"
version = "4.0.2"
description = "Show coverage stats online via coveralls.io"
readme = "README.rst"

repository = "http://github.com/TheKevJames/coveralls-python"
authors = ["Kevin James <coveralls-python@thekev.in>"]
license = "MIT"

packages = [
    { include = "coveralls" },
]

classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Topic :: Software Development :: Testing",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]

[tool.poetry.urls]
Changelog = "https://github.com/TheKevJames/coveralls-python/blob/master/CHANGELOG.md"
Docs = "https://coveralls-python.rtfd.io/"

[tool.poetry.scripts]
coveralls = "coveralls.cli:main"
python-coveralls = "coveralls.cli:main"

[tool.poetry.dependencies]
python = ">=3.10,<4.0"
coverage = { version = ">=5.0,<8.0,!=6.0.*,!=6.1,!=6.1.1", extras = ["toml"] }
docopt = ">=0.6.1,<0.7.0"
requests = ">=1.0.0,<3.0.0"

pyyaml = { version = ">=3.10,<7.0", optional = true }

[tool.poetry.group.dev.dependencies]
pytest = "8.3.5"
responses = "0.25.8"

[tool.poetry.group.docs]
optional = true
[tool.poetry.group.docs.dependencies]
sphinx = { version = "7.4.7", python = ">=3.9" }

[tool.poetry.extras]
yaml = ["pyyaml"]

[tool.pytest.ini_options]
# addopts = "-Werror"
filterwarnings = [
    "error",
    # cov5 and cov6 are deprecated on py3.12+
    "ignore:co_lnotab is deprecated, use co_lines instead:DeprecationWarning",
]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
