[project]
name = "coveralls"
version = "4.1.0"
description = "Show coverage stats online via coveralls.io"
readme = "README.rst"
requires-python = ">=3.10"

authors = [
    { name="Kevin James", email="coveralls-python@thekev.in" },
]
license = { text = "MIT" }

classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Topic :: Software Development :: Testing",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = [
    "coverage[toml] (>=5.0,<8.0,!=6.0b1,!=6.0,!=6.0.1,!=6.0.2,!=6.1,!=6.1.1)",
    "requests (>=1.0.0,<3.0.0)",
    "typer (>=0.12.0,<1.0.0)"
]

[project.urls]
Changelog = "https://github.com/TheKevJames/coveralls-python/blob/master/CHANGELOG.md"
Docs = "https://coveralls-python.rtfd.io/"
Repository = "https://github.com/TheKevJames/coveralls-python"

[project.scripts]
coveralls = "coveralls.cli:main"
python-coveralls = "coveralls.cli:main"

[project.optional-dependencies]
yaml = ["pyyaml (>=3.10,<7.0)"]

[dependency-groups]
dev = [
    "pytest ==9.0.2",
    "responses ==0.26.0"
]
docs = ["sphinx ==9.1.0; python_version >='3.12'"]

[tool.poetry]
packages = [
    { include = "coveralls" },
]

[tool.pytest.ini_options]
# addopts = "-Werror"
filterwarnings = [
    "error",
    # cov5 and cov6 are deprecated on py3.12+
    "ignore:co_lnotab is deprecated, use co_lines instead:DeprecationWarning",
]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
